adding ability to constrain the joint probability table for aligns based on prefiltered "good" transitions + additive smoothing