@@ -55,9 +55,9 @@
       <artifactId>mallet</artifactId>
     </dependency>
     <dependency>
-        <groupId>org.codehaus.gpars</groupId>
-        <artifactId>gpars</artifactId>
-        <version>1.2.1</version>
+      <groupId>org.codehaus.gpars</groupId>
+      <artifactId>gpars</artifactId>
+      <version>1.2.1</version>
     </dependency>
   </dependencies>
 
@@ -99,4 +99,112 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>launch-groovy</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.groovy</groupId>
+          <artifactId>groovy-groovysh</artifactId>
+          <version>${groovy-all-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.2</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <defaultGoal>install</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-version}</version>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.4.0</version>
+            <executions>
+              <execution>
+                <id>exec-one</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>java</executable>
+              <!--<workingDirectory>/tmp</workingDirectory>-->
+              <arguments>
+                <argument>-Xmx1024m</argument>
+                <argument>-XX:MaxPermSize=192m</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>org.codehaus.groovy.tools.shell.Main</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>launch-repl</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.groovy</groupId>
+          <artifactId>groovy-groovysh</artifactId>
+          <version>${groovy-all-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.2</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <defaultGoal>install</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-version}</version>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.4.0</version>
+            <executions>
+              <execution>
+                <id>exec-one</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>java</executable>
+              <!--<workingDirectory>/tmp</workingDirectory>-->
+              <arguments>
+                <argument>-Xmx1024m</argument>
+                <argument>-XX:MaxPermSize=192m</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>groovy.ui.Console</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
